Fixed spacings for action bar and navbar

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -28,3 +28,7 @@
   padding-top: 10px;
   margin-bottom: 2.5vh;
 }
+
+.navbar-logo {
+  padding-left: 5%;
+}
